# portfolio-watcher

./: .env.ib-gateway.example  .gitignore  MOBILE.md  README.md  SETUP.md  catalysts.py  docker-compose.ib-gateway.yml  followup.sh  metrics.py  notify.sh  pyproject.toml  requirements.txt  run.sh  sessions.sh  tactical.py  test_tactical.py  tmux.conf  watcher-settings.json  wf.sh
data/: econ_calendar.json
launchd/: com.shawn.portfolio-watcher-daily.plist  com.shawn.portfolio-watcher-weekly.plist
